--- a/index.html
+++ b/index.html
@@ -3,12 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 130 | Personal Homepage</title>
+    <title>WDD 130 | Tanatswa Mbewe</title>
 </head>
 <body>
-    <h1>Welcome to WDD 130.</h1>
-    <p>This page will become your homepage for the course. You will remove this text and replace it with your own personal details.</p>
+    <header>
+        <nav>
+            <a>Home</a>
+            <a>Rafting Site</a>
+        </nav>
+    </header>
 
-    <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple.">
+    <main>
+        <h1>Welcome to WDD 130.</h1>
+        <p>Hello, Im Tanatswa Mbewe. I am a student at BYU whos currently enrolled in the web development course.
+        become your homepage for the course. You will remove this text and replace it with your own personal details.</p>
+        <img scr="Profile.webp" alt="picture of Tanatswa Mbewe"> 
+    </main>
 </body>
 </html>
