Fix navigation links and add footer section
Updated navigation links and added footer.

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
     <header>
         <nav>
-            <a>Home</a>
-            <a>Rafting Site</a>
+            <a href="#">Home</a>
+            <a href="wwr/">Rafting Site</a>
         </nav>
     </header>
 
@@ -19,5 +19,8 @@
         become your homepage for the course. You will remove this text and replace it with your own personal details.</p>
         <img scr="images/Profile.webp" alt="picture of Tanatswa Mbewe" width="200"> 
     </main>
+    <footer>
+        <p>©Tanatswa Mbewe</p>
+    </footer>
 </body>
 </html>
