Fix image source attribute case in index.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h1>Welcome to WDD 130.</h1>
         <p>Hello, Im Tanatswa Mbewe. I am a student at BYU whos currently enrolled in the web development course.
         become your homepage for the course. You will remove this text and replace it with your own personal details.</p>
-        <img scr="images/Profile.webp" alt="picture of Tanatswa Mbewe" width="200"> 
+        <img scr="images/profile.webp" alt="picture of Tanatswa Mbewe" width="200"> 
     </main>
     <footer>
         <p>©Tanatswa Mbewe</p>
