--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
     <main>
         <h1>Welcome to WDD 130.</h1>
-        <p>Hello, Im Tanatswa Mbewe. I am a student at BYU whos currently enrolled in the web development course.
-        become your homepage for the course. You will remove this text and replace it with your own personal details.</p>
+        <p>Hello, Im Tanatswa Mbewe. I am a student at BYU whos currently enrolled in the web development course. I love 
+            BYU so much because its cheap and you get the best course materials and they teach you best practices</p>
         <img scr="images/profile.webp" alt="picture of Tanatswa Mbewe" width="200"> 
     </main>
     <footer>
