--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h1>Welcome to WDD 130.</h1>
         <p>Hello, Im Tanatswa Mbewe. I am a student at BYU whos currently enrolled in the web development course. I love 
             BYU so much because its cheap and you get the best course materials and they teach you best practices</p>
-        <img scr="images/profile.jpg" alt="picture of Tanatswa Mbewe" width="200"> 
+        <img src="images/profile.jpg" alt="picture of Tanatswa Mbewe" width="200"> 
     </main>
     <footer>
         <p>©Tanatswa Mbewe</p>
