Enhance basic layout with semantic elements
Added semantic HTML elements and improved structure.

--- a/week02/basic-layout.html
+++ b/week02/basic-layout.html
@@ -3,9 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>placeholder</title>
+    <title>Basic HTML Structure</title>
+    <meta name="description" content="A basic HTML Structure using semantic HTML elements">
+    <meta name="author" content="Tanatswa Mbewe">
 </head>
 <body>
-    
+    <header>
+        <img src="images/basic-logo.png" alt="text-here" width="128" height="128">
+    </header>
+    <nav>
+        <ul>
+            <li><a href="#">Delta Force Mobile</a></li>
+            <li><a href="#">checkmyGitHubRepos</a></li>
+        </ul>
+    </nav>
+    <main>
+        <h1>Basic HTML Structure </h1>
+        <section>
+            <h2>Heading</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                laboris nisi ut aliquip ex ea
+            </p>
+        </section>
+        <section>
+            <h2>Heading</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                laboris nisi ut aliquip ex ea
+            </p>
+        </section>
+    </main>
+    <aside>
+        <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/payson-utah/800×500/payson-utah-temple-celestial-room-1458545.jpg alt="Pason Utah Temple Celestial" width="200">
+    </aside>
+    <footer>
+        <p>👀Tanatswa Mbewe 2025</p>
+    </footer>
 </body>
 </html>
