Update image source in basic-layout.html

--- a/week02/basic-layout.html
+++ b/week02/basic-layout.html
@@ -35,7 +35,7 @@
         </section>
     </main>
     <aside>
-        <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/payson-utah/800×500/payson-utah-temple-celestial-room-1458545.jpg alt="Pason Utah Temple Celestial" width="200">
+        <img src="https://www.churchofjesuschrist.org/temples/photo-gallery?lang=eng" alt="Recomend Desk" width="200">
     </aside>
     <footer>
         <p>👀Tanatswa Mbewe 2025</p>
