Update navigation links in basic-layout.html

--- a/week02/basic-layout.html
+++ b/week02/basic-layout.html
@@ -13,8 +13,8 @@
     </header>
     <nav>
         <ul>
-            <li><a href="#">Delta Force Mobile</a></li>
-            <li><a href="#">checkmyGitHubRepos</a></li>
+            <li><a href="https://www.playdeltaforce.com/">Delta Force Mobile</a></li>
+            <li><a href="https://webcraftingtwo.github.io/wdd130/">Home Page</a></li>
         </ul>
     </nav>
     <main>
