--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width", initial-scale=1.0">
+    <meta name="description" content="Tanatswa Mbewe's home page for the Web Fundamentals course WWD130.">
+    <meta name="author" content="Tanatswa Mbewe.">
     <title>WDD 130 | Tanatswa Mbewe</title>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
@@ -20,6 +22,11 @@
             BYU so much because its cheap and you get the best course materials and they teach you best practices</p>
         <img src="images/profile.jpg" alt="picture of Tanatswa Mbewe" width="200"> 
     </main>
+    <aside>
+        <h2>Gweru</h2>
+        <img src="images/zimbabwe.jpg" alt="A picture of Great Zimbabwe Ruins">
+        <p>Gweru is the third biggest city in Zimbabwe</p>
+    </aside>
     <footer>
         <p>©Tanatswa Mbewe</p>
     </footer>
