Update viewport and link text in index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width", initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Tanatswa Mbewe's home page for the Web Fundamentals course WWD130.">
     <meta name="author" content="Tanatswa Mbewe.">
     <title>WDD 130 | Tanatswa Mbewe</title>
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <a href="#">Home</a>
-            <a href="wwr/">Rafting Site</a>
+            <a href="wwr/">Rafting Website</a>
         </nav>
     </header>
 
@@ -24,7 +24,7 @@
     </main>
     <aside>
         <h2>Gweru</h2>
-        <img src="images/zimbabwe.jpg" alt="A picture of Great Zimbabwe Ruins">
+        <img src="images/gweru.jpg" alt="A picture of Great Zimbabwe Ruins">
         <p>Gweru is the third biggest city in Zimbabwe</p>
     </aside>
     <footer>
