Add temple list to index.html
Added a list of temples to the main content.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--17 November 2025-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -21,6 +22,11 @@
         <p>Hello, Im Tanatswa Mbewe. I am a student at BYU whos currently enrolled in the web development course. I love 
             BYU so much because its cheap and you get the best course materials and they teach you best practices</p>
         <img src="images/profile.jpg" alt="picture of Tanatswa Mbewe" width="200"> 
+    <ul>
+        <li><a href="#">Temple1</a></li>
+        <li><a>Temple2</a></li>
+        <li><a>Temple3</a></li>
+    </ul>
     </main>
     <aside>
         <h2>Gweru</h2>
