Add class 'box' to ul and aside elements

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         <p>Hello, Im Tanatswa Mbewe. I am a student at BYU whos currently enrolled in the web development course. I love 
             BYU so much because its cheap and you get the best course materials and they teach you best practices</p>
         <img src="images/profile.jpg" alt="picture of Tanatswa Mbewe" width="200"> 
-    <ul>
+    <ul class="box">
         <li><a href="#">Temple1</a></li>
         <li><a>Temple2</a></li>
         <li><a>Temple3</a></li>
     </ul>
     </main>
-    <aside>
+    <aside class="box">
         <h2>Gweru</h2>
         <img src="images/gweru.jpg" alt="A picture of Great Zimbabwe Ruins">
         <p>Gweru is the third biggest city in Zimbabwe</p>
