Modify header and add profile image
Updated the header to include the name and added a profile image.

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     </header>
 
     <main>
-        <h1>Welcome to WDD 130.</h1>
+        <h1>Tanatswa Mbewe | WDD 130.</h1>
+        <img src="images/profile.jpg" alt="picture of Tanatswa Mbewe" width="200">
         <p>Hello, Im Tanatswa Mbewe. I am a student at BYU whos currently enrolled in the web development course. I love 
-            BYU so much because its cheap and you get the best course materials and they teach you best practices</p>
-        <img src="images/profile.jpg" alt="picture of Tanatswa Mbewe" width="200"> 
+            BYU so much because its cheap and you get the best course materials and they teach you best practices</p> 
     <ul class="box">
         <li><a href="#">Temple1</a></li>
         <li><a>Temple2</a></li>
