Update paragraph with additional placeholder text
Added placeholder text to enhance content description.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
         <h1>Tanatswa Mbewe | WDD 130.</h1>
         <img src="images/profile.jpg" alt="picture of Tanatswa Mbewe" width="200">
         <p>Hello, Im Tanatswa Mbewe. I am a student at BYU whos currently enrolled in the web development course. I love 
-            BYU so much because its cheap and you get the best course materials and they teach you best practices</p> 
+            BYU so much because its cheap and you get the best course materials and they teach you best practices.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua," and it is used to simulate the visual form of text without the distraction of actual readable content.
+            Lorem ipsum helps designers and typographers evaluate visual design without relying on meaningful text that might detract
+        </p> 
     <ul class="box">
         <li><a href="#">Temple1</a></li>
         <li><a>Temple2</a></li>
