Update Gweru description in index.html
Expanded the description of Gweru with additional text.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
     <aside class="box">
         <h2>Gweru</h2>
         <img src="images/gweru.jpg" alt="A picture of Great Zimbabwe Ruins">
-        <p>Gweru is the third biggest city in Zimbabwe</p>
+        <p>Gweru is the third biggest city in Zimbabwe. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+            incididunt ut labore et dolore magna aliqua," and it is used to simulate the visual form of text without the distraction of 
+            actual readable content. Lorem ipsum helps designers and typographers evaluate visual design without relying on meaningful text 
+            that might detract</p>
     </aside>
     <footer>
         <p>©Tanatswa Mbewe</p>
