--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <nav>
             <a href="#">Home</a>
             <a href="wwr/">Rafting Website</a>
+            <a href="#">siteplan</a>
+            <a href="#">Profile</a>
         </nav>
     </header>
 
