Add preconnect links for Google Fonts
Added preconnect links for Google Fonts to improve loading performance.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="description" content="Tanatswa Mbewe's home page for the Web Fundamentals course WWD130.">
     <meta name="author" content="Tanatswa Mbewe.">
     <title>WDD 130 | Tanatswa Mbewe</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
