Add 'indent' class to the box unordered list

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             and it is used to simulate the visual form of text without the distraction of actual readable content. Lorem ipsum helps designers 
             and typographers evaluate visual design without relying on meaningful text that might detract
         </p> 
-    <ul class="box">
+    <ul class="box indent">
         <li><a href="#">Temple1</a></li>
         <li><a>Temple2</a></li>
         <li><a>Temple3</a></li>
