--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
             and typographers evaluate visual design without relying on meaningful text that might detract
         </p> 
     <ul class="box indent">
-        <li><a href="#">Temple1</a></li>
-        <li><a>Temple2</a></li>
-        <li><a>Temple3</a></li>
+        <li><a href="https://newsroom.churchofjesuschrist.org/article/aba-nigeria-temple" target="_blank">Aba Nigeria Temple</a></li>
+        <li><a href="https://newsroom.churchofjesuschrist.org/article/adelaide-australia-temple" target="_blank">Adelaide Australia Temple</a></li>
+        <li><a href="https://newsroom.churchofjesuschrist.org/article/accra-ghana-temple" target="_blank">Accra Ghana Temple</a></li>
     </ul>
     </main>
     <aside class="box">
