--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <nav>
             <a href="#">Home</a>
             <a href="wwr/">Rafting Website</a>
-            <a href="#">siteplan</a>
-            <a href="#">Profile</a>
+            <a href="https://www.facebook.com/tanatswa.mbewe" target="_blank">Facebook</a>
+            <a href="https://www.linkedin.com/in/blessed-mbewe-3a99ba226?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">Profile</a>
         </nav>
     </header>
 
