--- a/wwr/about.html
+++ b/wwr/about.html
@@ -1,1 +1,62 @@
+<!--20 November 2025-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Tanatswa Mbewe's home page for the Web Fundamentals course WWD130.">
+    <meta name="author" content="Tanatswa Mbewe.">
+    <title>WDD 130 | Tanatswa Mbewe</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/styles.css">
+</head>
+<body>
+    <header>
+        <nav>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="trips.html" target="_blank">Trips</a></li>
+            <li><a href="contact.html" target="_blank">Contact</a></li>
+          </ul>
+        </nav>
+    </header>
 
+    <main>
+        <div class="hero">
+          <img src="images/hero.png" alt="hero image">
+          <h1>Mbewe Wafting</h1>
+          <article>
+            <img src="images/client.png" alt="happy client">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+            incididunt ut labore et dolore magna aliqua," and it is used to simulate the visual form of text without the distraction of 
+            actual readable content. Lorem ipsum helps designers and typographers evaluate visual design without relying on meaningful text 
+            that might detract</p>
+          </article>
+        </div>
+    </main>
+  
+    <section>
+        <h2>History</h2>
+        <p>
+          Gweru is the third biggest city in Zimbabwe. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+          incididunt ut labore et dolore magna aliqua," and it is used to simulate the visual form of text without the distraction of 
+          actual readable content. Lorem ipsum helps designers and typographers evaluate visual design without relying on meaningful text 
+          that might detract
+        </p>
+    </section>
+  
+    <section>
+      <h2>Adventure Awaits You!</h2>  
+    </section>    
+  
+    <footer>
+      <p>©2025. Good Trips. Tanatswa Mbewe</p>
+      <nav>
+        <a></a>
+      </nav>
+    </footer>
+</body>
+</html>
