--- a/wwr/about.html
+++ b/wwr/about.html
@@ -29,7 +29,7 @@
           <img src="images/hero.png" alt="hero image">
           <h1>Mbewe Wafting</h1>
           <article>
-            <img src="images/client.png" alt="happy client">
+            <img src="https://picsum.photos/200/300?grayscale" alt="happy client">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
             incididunt ut labore et dolore magna aliqua," and it is used to simulate the visual form of text without the distraction of 
             actual readable content. Lorem ipsum helps designers and typographers evaluate visual design without relying on meaningful text 
