--- a/wwr/about.html
+++ b/wwr/about.html
@@ -27,7 +27,7 @@
     <main>
         <div class="hero">
           <img src="images/hero.png" alt="hero image">
-          <h1>Mbewe Wafting</h1>
+          <h1>Good Trips Wafting</h1>
           <article>
             <img src="https://picsum.photos/200/300?grayscale" alt="happy client">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
