--- a/wwr/about.html
+++ b/wwr/about.html
@@ -14,6 +14,7 @@
 </head>
 <body>
     <header>
+        <img src="https://picsum.photos/200/300?grayscale" alt="logo">
         <nav>
           <ul>
             <li><a href="index.html">Home</a></li>
