--- a/wwr/about.html
+++ b/wwr/about.html
@@ -56,7 +56,9 @@
     <footer>
       <p>©2025. Good Trips. Tanatswa Mbewe</p>
       <nav>
-        <a></a>
+          <li><a><img src="" alt="facebook-icon"></a></li>
+          <li><a><img src="" alt="linkedin-icon"></a></li>
+          <li><a><img src="" alt="instagram-icon"></a></li>
       </nav>
     </footer>
 </body>
