--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Tanatswa Mbewe's home page for the Web Fundamentals course WWD130.">
+    <meta name="description" content="Home page for Good Trips Wrafting">
     <meta name="author" content="Tanatswa Mbewe.">
     <title>WDD 130 | Tanatswa Mbewe</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
