--- a/wwr/about.html
+++ b/wwr/about.html
@@ -27,10 +27,10 @@
 
     <main>
         <div class="hero">
-          <img src="https://picsum.photos/200/300?grayscale" alt="hero image">
+          <img src="images/rafting_banner.png" alt="hero image">
           <h1>Good Trips Wafting</h1>
           <article>
-            <img src="https://picsum.photos/200/300?grayscale" alt="happy client">
+            <img src="images/rafting_small.png" alt="rafting image">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
             incididunt ut labore et dolore magna aliqua," and it is used to simulate the visual form of text without the distraction of 
             actual readable content. Lorem ipsum helps designers and typographers evaluate visual design without relying on meaningful text 
@@ -56,9 +56,9 @@
     <footer>
       <p>©2025. Good Trips. Tanatswa Mbewe</p>
       <nav>
-          <li><a><img src="" alt="facebook-icon"></a></li>
-          <li><a><img src="" alt="linkedin-icon"></a></li>
-          <li><a><img src="" alt="instagram-icon"></a></li>
+          <li><a><img src="" alt="facebook-bw.svg"></a></li>
+          <li><a><img src="" alt="linkedin-bw.svg"></a></li>
+          <li><a><img src="" alt="instagram-bw.svg"></a></li>
       </nav>
     </footer>
 </body>
