--- a/wwr/about.html
+++ b/wwr/about.html
@@ -55,7 +55,7 @@
   
     <footer>
       <p>©2025. Good Trips. Tanatswa Mbewe</p>
-      <nav>
+      <nav class="socialmedia">
           <li><a><img src="facebook-bw.svg" alt="facebook logo"></a></li>
           <li><a><img src="linkedin-bw.svg" alt="linkedin logo"></a></li>
           <li><a><img src="instagram-bw.svg" alt="instagram logo"></a></li>
