--- a/wwr/about.html
+++ b/wwr/about.html
@@ -56,9 +56,9 @@
     <footer>
       <p>©2025. Good Trips. Tanatswa Mbewe</p>
       <nav class="socialmedia">
-          <li><a><img src="facebook-bw.svg" alt="facebook logo"></a></li>
-          <li><a><img src="linkedin-bw.svg" alt="linkedin logo"></a></li>
-          <li><a><img src="instagram-bw.svg" alt="instagram logo"></a></li>
+          <li><a><img src="/images/facebook-bw.svg" alt="facebook logo"></a></li>
+          <li><a><img src="/images/linkedin-bw.svg" alt="linkedin logo"></a></li>
+          <li><a><img src="/images/instagram-bw.svg" alt="instagram logo"></a></li>
       </nav>
     </footer>
 </body>
