--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,12 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Home page for Good Trips Wrafting">
+    <meta name="description" content="Home page for Good Trips Rafting">
     <meta name="author" content="Tanatswa Mbewe.">
-    <title>WDD 130 | Tanatswa Mbewe</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <title>About Us | Good Trips Rafting </title>
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
