--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Home page for Good Trips Rafting">
+    <meta name="description" content="Experience heart-pounding white water rafting with Good Trips! Tackle the best rapids in [Location] with our expert guides. Book your ultimate river adventure today!">
     <meta name="author" content="Tanatswa Mbewe.">
     <title>About Us | Good Trips Rafting </title>
     <link rel="stylesheet" href="styles/rafting.css">
