--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Experience heart-pounding white water rafting with Good Trips! Tackle the best rapids in [Location] with our expert guides. Book your ultimate river adventure today!">
+    <meta name="description" content="Experience heart-pounding white water rafting with Good Trips! Tackle the best rapids with our expert guides.">
     <meta name="author" content="Tanatswa Mbewe.">
     <title>About Us | Good Trips Rafting </title>
     <link rel="stylesheet" href="styles/rafting.css">
@@ -34,8 +34,6 @@
             that might detract</p>
           </article>
         </div>
-    </main>
-  
     <section>
         <h2>History</h2>
         <p>
@@ -49,7 +47,9 @@
     <section>
       <h2>Adventure Awaits You!</h2>  
     </section>    
-  
+
+    </main>
+ 
     <footer>
       <p>©2025. Good Trips. Tanatswa Mbewe</p>
       <nav class="socialmedia">
