--- a/wwr/about.html
+++ b/wwr/about.html
@@ -16,8 +16,8 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About Us</a></li>
-            <li><a href="trips.html" target="_blank">Trips</a></li>
-            <li><a href="contact.html" target="_blank">Contact</a></li>
+            <li><a href="trips.html">Trips</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
     </header>
