--- a/wwr/about.html
+++ b/wwr/about.html
@@ -57,6 +57,13 @@
           <li><a><img src="images/linkedin-bw.svg" alt="linkedin logo"></a></li>
           <li><a><img src="images/instagram-bw.svg" alt="instagram logo"></a></li>
       </nav>
+    <p>
+      <a href="https://jigsaw.w3.org/css-validator/check/referer">
+        <img style="border:0;width:88px;height:31px"
+            src="https://jigsaw.w3.org/css-validator/images/vcss-blue"
+            alt="Valid CSS!">
+      </a>
+      </p>
     </footer>
 </body>
 </html>
