--- a/wwr/about.html
+++ b/wwr/about.html
@@ -53,9 +53,9 @@
     <footer>
       <p>©2025. Good Trips. Tanatswa Mbewe</p>
       <nav class="socialmedia">
-          <li><a><img src="images/facebook-bw.svg" alt="facebook logo"></a></li>
-          <li><a><img src="images/linkedin-bw.svg" alt="linkedin logo"></a></li>
-          <li><a><img src="images/instagram-bw.svg" alt="instagram logo"></a></li>
+          <li><a><img src="images/facebook-bw.svg" alt="facebook logo" width="100px" height="auto"></a></li>
+          <li><a><img src="images/linkedin-bw.svg" alt="linkedin logo" width="100px" height="auto"></a></li>
+          <li><a><img src="images/instagram-bw.svg" alt="instagram logo" width="100px" height="auto"></a></li>
       </nav>
     <p>
       <a href="https://jigsaw.w3.org/css-validator/check/referer">
