--- a/wwr/about.html
+++ b/wwr/about.html
@@ -51,19 +51,12 @@
     </main>
  
     <footer>
-      <p>©2025. Good Trips. Tanatswa Mbewe</p>
+      <p>©2025. Good Trips Rafting. Tanatswa Mbewe</p>
       <nav class="socialmedia">
           <li><a><img src="images/facebook-bw.svg" alt="facebook logo" width="100px" height="auto"></a></li>
           <li><a><img src="images/linkedin-bw.svg" alt="linkedin logo" width="100px" height="auto"></a></li>
           <li><a><img src="images/instagram-bw.svg" alt="instagram logo" width="100px" height="auto"></a></li>
       </nav>
-    <p>
-      <a href="https://jigsaw.w3.org/css-validator/check/referer">
-        <img style="border:0;width:88px;height:31px"
-            src="https://jigsaw.w3.org/css-validator/images/vcss-blue"
-            alt="Valid CSS!">
-      </a>
-      </p>
     </footer>
 </body>
 </html>
