--- a/wwr/about.html
+++ b/wwr/about.html
@@ -53,9 +53,9 @@
     <footer>
       <p>©2025. Good Trips Rafting. Tanatswa Mbewe</p>
       <nav class="socialmedia">
-          <a><img src="images/facebook-bw.svg" alt="facebook logo"></a>
-          <a><img src="images/linkedin-bw.svg" alt="linkedin logo"></a>
-          <a><img src="images/instagram-bw.svg" alt="instagram logo"></a>
+          <a href="https://facebook.com"><img src="images/facebook-bw.svg" alt="facebook logo"></a>
+          <a href="https://linkedin.com"><img src="images/linkedin-bw.svg" alt="linkedin logo"></a>
+          <a href="https://instagram.com"><img src="images/instagram-bw.svg" alt="instagram logo"></a>
       </nav>
     </footer>
 </body>
