--- a/wwr/about.html
+++ b/wwr/about.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <img src="https://picsum.photos/200/300?grayscale" alt="logo">
+        <img src="https://picsum.photos/200/300?grayscale" alt=" Good Trips logo">
         <nav>
           <ul>
             <li><a href="index.html">Home</a></li>
@@ -24,8 +24,8 @@
 
     <main>
         <div class="hero">
-          <img src="images/rafting_banner.jpg" alt="hero image">
-          <h1>Good Trips Wafting</h1>
+          <img src="images/rafting_banner.jpg" alt="people Rafting">
+          <h1>Good Trips Rafting</h1>
           <article>
             <img src="images/rafting_small.jpg" alt="rafting image">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
@@ -53,9 +53,11 @@
     <footer>
       <p>©2025. Good Trips Rafting. Tanatswa Mbewe</p>
       <nav class="socialmedia">
-          <a href="https://facebook.com"><img src="images/facebook-bw.svg" alt="facebook logo"></a>
-          <a href="https://linkedin.com"><img src="images/linkedin-bw.svg" alt="linkedin logo"></a>
-          <a href="https://instagram.com"><img src="images/instagram-bw.svg" alt="instagram logo"></a>
+          <ul>
+            <li><a href="https://facebook.com"><img src="images/facebook-bw.svg" alt="facebook logo"></a></li>
+            <li><a href="https://linkedin.com"><img src="images/linkedin-bw.svg" alt="linkedin logo"></a></li>
+            <li><a href="https://instagram.com"><img src="images/instagram-bw.svg" alt="instagram logo"></a></li>
+          </ul>
       </nav>
     </footer>
 </body>
