--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="https://www.linkedin.com/in/blessed-mbewe-3a99ba226?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">Linkedin Profile</a>
         </nav>
     </header>
-
+ <div class="grid">
     <main>
         <h1>Tanatswa Mbewe | WDD 130.</h1>
         <img src="images/profile.jpg" alt="picture of Tanatswa Mbewe" width="200">
@@ -51,6 +51,7 @@
             actual readable content. Lorem ipsum helps designers and typographers evaluate visual design without relying on meaningful text 
             that might detract</p>
     </aside>
+ </div>
     <footer>
         <p>©Tanatswa Mbewe</p>
     </footer>
