--- a/wwr/about.html
+++ b/wwr/about.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <img src="https://picsum.photos/200/300?grayscale" alt=" Good Trips logo">
+        <img src="images/z-raftingcompas.jpg" alt=" Good Trips logo">
         <nav>
           <ul>
             <li><a href="index.html">Home</a></li>
