Create poll-form.html with form structure
Added basic structure for a poll form with fields for full name, email, and quantity selection.

--- a/week05/poll-form.html
+++ b/week05/poll-form.html
@@ -1,1 +1,26 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My First Page</title>
+</head>
+<body>
+    <header>
+      
+    </header>
+    <main>
+      <form>
+        <label for="fullname">Full Name:</label>
+        <input type="text" id="fullname" name="fullname" required>
+        <label for="useremail"  id="useremail" name="useremail" required>Email:</label>
+        <label for="quantity">Select Quantity</label>
+        <Select name="quantity" id="quantity">
+          <option value="1">one</option>
+      </form> 
+    </main>
+    <footer>
+      
+    </footer>
+</body>
+</html>
