--- a/week05/quiz.html
+++ b/week05/quiz.html
@@ -1,1 +1,16 @@
+<!DOCTYPE HTML>
+<html lang="en">
 
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale =1.0">
+    <title>Basic Quiz Form</title>
+    <link rel="stylesheet" href="styles/quiz.css">
+    
+  </head>
+
+  <body>
+    
+  </body>
+  
+</html>
