Update logo image and social links section

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="images/logo.png" alt="Rafting Site Logo">
+            <img src="images/z-raftingcompas.jpg" alt="Rafting Site Logo">
         </div>
         <nav>
             <ul class="navigation">
@@ -114,7 +114,7 @@
     <footer>
         <p>&copy; 2025 Good Trips Rafting</p>
         <p><a href="site-plan.html">Site Plan</a></p>
-        <div class="sociallinks">
+        <div class="socialmedia">
             <a href="https://facebook.com" target="_blank">
                 <img src="images/facebook.png" alt="Facebook">
             </a>
