Revise company name and footer structure
Updated company name and footer content, added social media links.

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -27,7 +27,7 @@
     <main>
         <!-- Company Information Section -->
         <div class="company-info">
-            <h1>Good Trips water Rafting Company</h1>
+            <h1>Good Trips Rafting</h1>
             <address>
                 6353 Mkoba 18<br>
                 Gweru, Zimbabwe<br>
@@ -111,20 +111,16 @@
 
     </main>
 
+    
     <footer>
-        <p>&copy; 2025 Good Trips Rafting</p>
-        <p><a href="site-plan.html">Site Plan</a></p>
-        <div class="socialmedia">
-            <a href="https://facebook.com" target="_blank">
-                <img src="images/facebook.png" alt="Facebook">
-            </a>
-            <a href="https://twitter.com" target="_blank">
-                <img src="images/twitter.png" alt="Twitter">
-            </a>
-            <a href="https://instagram.com" target="_blank">
-                <img src="images/instagram.png" alt="Instagram">
-            </a>
-        </div>
+      <p>©2025. Good Trips Rafting. Tanatswa Mbewe</p>
+      <nav class="socialmedia">
+          <ul>
+            <li><a href="https://facebook.com"><img src="images/facebook-bw.svg" alt="facebook logo"></a></li>
+            <li><a href="https://linkedin.com"><img src="images/linkedin-bw.svg" alt="linkedin logo"></a></li>
+            <li><a href="https://instagram.com"><img src="images/instagram-bw.svg" alt="instagram logo"></a></li>
+          </ul>
+      </nav>
     </footer>
 </body>
 </html>
