Update employee images to JPEG format

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -95,15 +95,15 @@
             <h2>We Are Here to Serve You</h2>
             <div class="employee-row">
                 <figure>
-                    <img src="images/employee1.jpg" alt="Portrait of Jim, a river guide">
+                    <img src="images/employee1.jpeg" alt="Portrait of Tonde, a river guide">
                     <figcaption>Tonde- River Guide</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/employee2.jpg" alt="Portrait of Sarah, the office manager">
+                    <img src="images/employee2.jpeg" alt="Portrait of Sarah, the office manager">
                     <figcaption>Sarah - Office Manager</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/employee3.jpg" alt="Portrait of Mike, a safety instructor">
+                    <img src="images/employee3.jpeg" alt="Portrait of Mike Dube, a safety instructor">
                     <figcaption>Dube - Safety Instructor</figcaption>
                 </figure>
             </div>
