Update employee names and roles in contact.html

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -99,12 +99,12 @@
                     <figcaption>Tonde- River Guide</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/employee2.jpeg" alt="Portrait of Sarah, the office manager">
-                    <figcaption>Sarah - Office Manager</figcaption>
+                    <img src="images/employee2.jpeg" alt="Portrait of Dube, the office manager">
+                    <figcaption>Dube - Office Manager</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/employee3.jpeg" alt="Portrait of Mike Dube, a safety instructor">
-                    <figcaption>Dube - Safety Instructor</figcaption>
+                    <img src="images/employee3.jpeg" alt="Portrait of Sarah, a safety instructor">
+                    <figcaption>Sarah - Safety Instructor</figcaption>
                 </figure>
             </div>
         </section>
