Fix checkbox input for newsletter subscription

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -81,7 +81,7 @@
 
                 <div class="form-item checkbox-container">
                     <label class="checkbox-label">
-                        <input type="checkbox" name="newsletter" value="yes"> 
+                        <input type="checkbox" id="newsletter" name="newsletter" value="yes"> 
                         Please subscribe me to the monthly newsletter
                     </label>
                 </div>
