Fix radio button IDs in contact form

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -68,9 +68,9 @@
                 <div class="form-item">
                     <p class="label-text">Purpose of Message:</p>
                     <div class="radio-group">
-                        <label><input type="radio" name="purpose" id="purpose" value="general" checked> General Inquiry</label>
-                        <label><input type="radio" name="purpose" id="purpose" value="reservation"> Reservation Question</label>
-                        <label><input type="radio" name="purpose" id="purpose" value="suggestion"> Website Suggestion</label>
+                        <label><input type="radio" name="purpose" id="purposeg" value="general" checked> General Inquiry</label>
+                        <label><input type="radio" name="purpose" id="purposer" value="reservation"> Reservation Question</label>
+                        <label><input type="radio" name="purpose" id="purposes" value="suggestion"> Website Suggestion</label>
                     </div>
                 </div>
 
