--- a/wwr/index.html
+++ b/wwr/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home | White Water Rafting</title>
+    <title>Home | Good Trips Rafting</title>
     <meta name="description" content="Experience the thrill of water rafting with Good Trips.">
     <meta name="author" content="Tanatswa Mbewe">
     <link rel="stylesheet" href="styles/rafting.css">
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="images/logo.png" alt="Rafting Site Logo">
+            <img src="images/z-raftingcompas.jpg" alt="Rafting Site Logo">
         </div>
         <h1>Good Trips Rafting</h1>
         <nav>
@@ -27,7 +27,7 @@
     <main>
         <!-- Hero Image Section -->
         <div class="hero">
-            <img src="images/hero.jpg" alt="Rafting boat on river">
+            <img src="images/rafting_banner.jpg" alt="Rafting boat on river">
             <div class="hero-msg">
                 <h1>Life is a Journey</h1>
                 <p>Make the most of it with an adventure of a lifetime.</p>
