--- a/wwr/about.html
+++ b/wwr/about.html
@@ -7,11 +7,11 @@
     <meta name="description" content="Experience heart-pounding white water rafting with Good Trips! Tackle the best rapids with our expert guides.">
     <meta name="author" content="Tanatswa Mbewe.">
     <title>About Us | Good Trips Rafting </title>
-    <link rel="stylesheet" href="styles/rafting.css">
+    <link rel="stylesheet" href="rafting.css">
 </head>
 <body>
     <header>
-        <img src="images/z-raftingcompas.jpg" alt=" Good Trips logo">
+        <img src="images/style00.jpg" alt=" Good Trips logo">
         <nav>
           <ul>
             <li><a href="index.html">Home</a></li>
@@ -24,10 +24,10 @@
 
     <main>
         <div class="hero">
-          <img src="images/rafting_banner.jpg" alt="people Rafting">
+          <img src="images/style01.jpg" alt="people Rafting">
           <h1>Good Trips Rafting</h1>
           <article>
-            <img src="images/rafting_small.jpg" alt="rafting image">
+            <img src="images/style2.jpg" alt="rafting image">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
             incididunt ut labore et dolore magna aliqua," and it is used to simulate the visual form of text without the distraction of 
             actual readable content. Lorem ipsum helps designers and typographers evaluate visual design without relying on meaningful text 
