Revise trips.html for improved content and layout
Updated the content and structure of the trips page to enhance user experience and provide clearer information about rafting adventures.

--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -3,97 +3,96 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Experience heart-pounding white water rafting with Good Trips! Tackle the best rapids with our expert guides.">
-    <meta name="author" content="Tanatswa Mbewe.">
-    <title>Trips | Good Trips Rafting </title>
-    <link rel="stylesheet" href="styles/rafting.css">
+    <meta name="description" content="Choose your rafting adventure. We offer half-day, full-day, and multi-day trips on the best rapids in Zimbabwe.">
+    <meta name="author" content="Tanatswa Mbewe">
+    <title>Our Trips | Good Trips Rafting</title>
+    <link rel="stylesheet" href="rafting.css">
 </head>
 <body>
     <header>
-        <img src="images/z-raftingcompas.jpg" alt=" Good Trips logo">
+        <img src="images/logo.png" alt="Good Trips Rafting Logo">
         <nav>
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About Us</a></li>
-            <li><a href="trips.html">Trips</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
-          </ul>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="trips.html">Trips</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+            </ul>
         </nav>
     </header>
 
     <main>
-          <!-- Call to Action to Contact -->
         <section class="trip-cta">
-            <h2>Plan Your Custom Trip</h2>
-            <p>Don't see exactly what you're looking for? Contact us to arrange a private group adventure.</p>
-            <a href="contact.html" class="cta-btn">Contact Us</a>
+            <h1>Choose Your Adventure</h1>
+            <p>Ready to book? Have questions about availability? Contact us today to secure your spot on the boat!</p>
+            <a href="contact.html" class="cta-button">Book a Reservation</a>
         </section>
 
-        <!-- Trip Descriptions (Grid) -->
-        <section class="trip-descriptions">
+        <section class="trip-grid">
+            
             <div class="trip-card">
-                <img src="images/trip1.jpg" alt="Salmon River">
-                <h3>Salmon River Run</h3>
-                <p>A beautiful 3-day excursion perfect for families. Enjoy mild rapids and camping under the stars.</p>
+                <img src="images/trip-halfday.jpg" alt="Raft hitting a splash">
+                <h2>The Splash & Dash (Half Day)</h2>
+                <p>Perfect for beginners or those short on time. This 3-hour trip covers the first 10 rapids. Great for families and first-timers wanting a taste of the action.</p>
             </div>
+
             <div class="trip-card">
-                <img src="images/trip2.jpg" alt="Desolation Canyon">
-                <h3>Desolation Canyon</h3>
-                <p>Explore the rugged beauty of the canyon. This 5-day trip features history, hiking, and Class III rapids.</p>
+                <img src="images/trip-fullday.jpg" alt="Raft going down a waterfall">
+                <h2>The Big One (Full Day)</h2>
+                <p>Our most popular trip! conquer 25 km of intense Class IV and V rapids. Lunch is served by the riverbank. This is the ultimate adrenaline experience.</p>
             </div>
+
             <div class="trip-card">
-                <img src="images/trip3.jpg" alt="Grand Canyon">
-                <h3>Grand Canyon Adventure</h3>
-                <p>The ultimate rafting experience. 7 days of intense rapids and breathtaking scenery. Experienced rafters only.</p>
+                <img src="images/trip-multiday.jpg" alt="Camping by the river">
+                <h2>The River Expedition (3 Days)</h2>
+                <p>Escape civilization completely. Sleep under the stars, fish for tigerfish, and raft the entire canyon. Includes all meals, camping gear, and expert guides.</p>
             </div>
         </section>
 
-        <!-- Trips Table -->
-        <section class="trips-table-section">
-            <h3>Available Packages</h3>
+        <section class="trip-table-section">
+            <h2>Trip Comparison</h2>
             <table>
                 <thead>
                     <tr>
                         <th>Trip Name</th>
                         <th>Duration</th>
                         <th>Difficulty</th>
-                        <th>Cost</th>
+                        <th>Cost (per person)</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Salmon River</td>
+                        <td>Splash & Dash</td>
+                        <td>3 Hours</td>
+                        <td>Class II-III</td>
+                        <td>$45</td>
+                    </tr>
+                    <tr>
+                        <td>The Big One</td>
+                        <td>8 Hours</td>
+                        <td>Class IV-V</td>
+                        <td>$120</td>
+                    </tr>
+                    <tr>
+                        <td>River Expedition</td>
                         <td>3 Days</td>
-                        <td>Class II</td>
-                        <td>$400</td>
-                    </tr>
-                    <tr>
-                        <td>Desolation Canyon</td>
-                        <td>5 Days</td>
-                        <td>Class III</td>
-                        <td>$850</td>
-                    </tr>
-                    <tr>
-                        <td>Grand Canyon</td>
-                        <td>7 Days</td>
-                        <td>Class IV+</td>
-                        <td>$1500</td>
+                        <td>Class III-V</td>
+                        <td>$350</td>
                     </tr>
                 </tbody>
             </table>
         </section>
-
     </main>
- 
+
     <footer>
-      <p>©2025. Good Trips Rafting. Tanatswa Mbewe</p>
-      <nav class="socialmedia">
-          <ul>
-            <li><a href="https://facebook.com"><img src="images/facebook-bw.svg" alt="facebook logo"></a></li>
-            <li><a href="https://linkedin.com"><img src="images/linkedin-bw.svg" alt="linkedin logo"></a></li>
-            <li><a href="https://instagram.com"><img src="images/instagram-bw.svg" alt="instagram logo"></a></li>
-          </ul>
-      </nav>
+        <p>©2025 Good Trips Rafting | Tanatswa Mbewe</p>
+        <nav class="socialmedia">
+            <ul>
+                <li><a href="https://facebook.com"><img src="images/facebook.svg" alt="Facebook"></a></li>
+                <li><a href="https://linkedin.com"><img src="images/linkedin.svg" alt="LinkedIn"></a></li>
+                <li><a href="https://instagram.com"><img src="images/instagram.svg" alt="Instagram"></a></li>
+            </ul>
+        </nav>
     </footer>
 </body>
 </html>
